# banded-chorus-origin

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/LibPIC/: CMakeLists.txt
src/LibPIC/PIC/: Badge.h  BitReversedPattern.h  BorisPush.h  CartCoord.h  Config.h  CurviCoord.h  FourTensor.h  FourVector.h  Geometry.h  Grid.h  GridArray.h  LossconeVDF.h  MaskingFunction.h  Matrix.h  MaxwellianVDF.cc  MaxwellianVDF.h  MirrorBasis.h  MirrorCotrans.cc  MirrorCotrans.h  MirrorField.h  MirrorGeometry.cc  MirrorGeometry.h  MirrorTransform.h  NRRandomEngine.h  Options.h  PartialShellVDF.cc  PartialShellVDF.h  Particle.h  PlasmaDesc.h  RandomReal.h  RelativisticLossconeVDF.cc  RelativisticLossconeVDF.h  RelativisticMaxwellianVDF.cc  RelativisticMaxwellianVDF.h  RelativisticPartialShellVDF.cc  RelativisticPartialShellVDF.h  RelativisticParticle.h  RelativisticTestParticleVDF.cc  RelativisticVDF.h  RelativisticVDFVariant.h  (+12 more)
src/LibPIC/test/: CMakeLists.txt  test-Badge.cc  test-BitReversedPattern.cc  test-BorisPush.cc  test-Geometry.cc  test-Grid.cc  test-GridArray.cc  test-MaskingFunction.cc  test-Math.cc  test-Matrix.cc  test-MirrorGeometry.cc  test-NRRandomEngine.cc  test-Options.cc  test-Particle.cc  test-PlasmaDesc.cc  test-RandomReal.cc  test-Range.cc  test-RelativisticParticle.cc  test-RelativisticVDF.cc  test-RelativisticVDFVariant.cc  test-Scalar.cc  test-Shape.cc  test-Tensor.cc  test-TypeMaps.cc  test-VDF.cc  test-VDFVariant.cc  test-Vector.cc  test-xoroshiro128.cc
src/common/: CMakeLists.txt  Geometry.cc  Geometry.h  PlasmaDesc.h  Predefined.h  common-config.h  config.h
src/common/Utility/: BorisPush.h  Grid.h  Options.cc  Options.h  Particle.h  Range.h  Scalar.h  Shape.h  Tensor.h  TypeMaps.h  Vector.h  lippincott.cc  lippincott.h  println.h
src/common/VDF/: BitReversedPattern.h  LossconeVDF.cc  LossconeVDF.h  MaxwellianVDF.cc  MaxwellianVDF.h  Particle.h  RandomReal.h  VDF.cc  VDF.h  VDFVariant.h
src/hybrid_1d/: CMakeLists.txt  Driver.cc  Driver.h  Geometry.cc  Geometry.h  InputWrapper.h  Inputs.h  Macros.h  ParamSet.cc  ParamSet.h  PlasmaDesc.h  Predefined.h  main.cc
src/hybrid_1d/Boundary/: Delegate.cc  Delegate.h  DistributedParticleDelegate.cc  DistributedParticleDelegate.h  MasterDelegate.cc  MasterDelegate.h  SubdomainDelegate.cc  SubdomainDelegate.h  WorkerDelegate.cc  WorkerDelegate.h
src/hybrid_1d/Core/: BField.cc  BField.h  Charge.cc  Charge.h  ColdSpecies.cc  ColdSpecies.h  Current.cc  Current.h  Domain.cc  Domain.h  Domain.hh  Domain_CAMCL.cc  Domain_CAMCL.h  Domain_PC.cc  Domain_PC.h  EField.cc  EField.h  ExternalSource.cc  ExternalSource.h  ExternalSource.hh  PartSpecies.cc  PartSpecies.h  Species.cc  Species.h
src/hybrid_1d/Include/: Inputs.h
src/hybrid_1d/Recorder/: EnergyRecorder.cc  EnergyRecorder.h  FieldRecorder.cc  FieldRecorder.h  MomentRecorder.cc  MomentRecorder.h  ParticleRecorder.cc  ParticleRecorder.h  Recorder.cc  Recorder.h  Snapshot.cc  Snapshot.h  SnapshotGrid.h  SnapshotParticle.cc  SnapshotParticle.h  VHistogramLocalSample.h  VHistogramRecorder.cc  VHistogramRecorder.h  vhist_test.nb
src/hybrid_1d/Utility/: BorisPush.h  GridQ.h  MessageDispatch-tuple.h  MessageDispatch-variant.h  MessageDispatch.cc  MessageDispatch.h  Options.cc  Options.h  Particle.h  Range.h  Scalar.h  Shape.h  Tensor.h  TypeMaps.h  Vector.h  lippincott.cc  lippincott.h  println.h
src/hybrid_1d/VDF/: BitReversedPattern.cc  BitReversedPattern.h  LossconeVDF.cc  LossconeVDF.h  MaxwellianVDF.cc  MaxwellianVDF.h  VDF.cc  VDF.h
src/libPIC/: CMakeLists.txt
src/libPIC/PIC/: Badge.h  BitReversedPattern.h  BitReversedPattern.nb  CMakeLists.txt  CartCoord.h  Config.h  CoordSystem.cc  CoordSystem.h  CurviCoord.h  FourTensor.h  FourVector.h  Geometry.cc  Geometry.h  Grid.h  LossconeVDF.cc  LossconeVDF.h  MaskingFunction.h  Matrix.h  MaxwellianVDF.cc  MaxwellianVDF.h  MirrorBasis.h  MirrorCotrans.cc  MirrorCotrans.h  MirrorField.h  MirrorGeometry.cc  MirrorGeometry.h  MirrorTransform.h  NRRandomEngine.h  Options.h  PartialShellVDF.cc  PartialShellVDF.h  Particle.h  PlasmaDesc.h  Predefined.h  RandomReal.cc  RandomReal.h  Range.h  RelativisticLossconeVDF.cc  RelativisticLossconeVDF.h  RelativisticMaxwellianVDF.cc  (+21 more)
src/libPIC/test/: CMakeLists.txt  test-Badge.cc  test-BitReversedPattern.cc  test-Geometry.cc  test-Grid.cc  test-MaskingFunction.cc  test-Matrix.cc  test-MirrorGeometry.cc  test-NRRandomEngine.cc  test-Particle.cc  test-PlasmaDesc.cc  test-RandomGenerator.cc  test-RandomReal.cc  test-Range.cc  test-RelativisticParticle.cc  test-RelativisticVDF.cc  test-RelativisticVDFVariant.cc  test-Scalar.cc  test-Shape.cc  test-Tensor.cc  test-TypeMaps.cc  test-VDF.cc  test-VDFVariant.cc  test-Vector.cc  test-xoroshiro128.cc
src/pic_1d/: CMakeLists.txt  DistributedDriver.cc  DistributedDriver.h  Driver.cc  Driver.h  Geometry.cc  Geometry.h  InputWrapper.h  Inputs.h  Macros.h  ParamSet.cc  ParamSet.h  PlasmaDesc.h  Predefined.h  TypeMaps.h  main.cc
src/pic_1d/Boundary/: Delegate.cc  Delegate.h  DistributedParticleDelegate.cc  DistributedParticleDelegate.h  MasterDelegate.cc  MasterDelegate.h  SubdomainDelegate.cc  SubdomainDelegate.h  WorkerDelegate.cc  WorkerDelegate.h
src/pic_1d/Core/: BField.cc  BField.h  ColdSpecies.cc  ColdSpecies.h  Current.cc  Current.h  Domain.cc  Domain.h  EField.cc  EField.h  ExternalSource.cc  ExternalSource.h  PartSpecies.cc  PartSpecies.h  Species.cc  Species.h
src/pic_1d/VDF/: VDF.cc  (+7 more)
src/rel_pic_1d/: CMakeLists.txt  Driver.cc  Driver.h  Geometry.cc  Geometry.h  InputWrapper.h  Inputs.h  Macros.h  ParamSet.cc  ParamSet.h  main.cc
tests/: CMakeLists.txt  analysis-old.nb  analysis.nb  imports-old.wl  imports.wl  main.cc  test-BitReversedPattern.cc  test-BorisPush.cc  test-Geometry.cc  test-Grid.cc  test-Options.cc  test-Particle.cc  test-PlasmaDesc.cc  test-Range.cc  test-Scalar.cc  test-Shape.cc  test-Tensor.cc  test-TypeMaps.cc  test-VDF.cc  test-VDFVariant.cc  test-Vector.cc
tests/libPIC/: CMakeLists.txt  test-BitReversedPattern.cc  test-BorisPush.cc  test-PlasmaDesc.cc  test-Shape.cc
(+344 files in other folders)
