
add_executable(pic_1d)
target_sources(pic_1d PRIVATE
    Macros.h
    Predefined.h
    Inputs.h
    InputWrapper.h
    ParamSet.h
    ParamSet.cc
    Core/BField.h
    Core/BField.cc
    Core/EField.h
    Core/EField.cc
    Core/Current.h
    Core/Current.cc
    Core/Species.h
    Core/Species.cc
    Core/PartSpecies.h
    Core/PartSpecies.cc
    Core/ColdSpecies.h
    Core/ColdSpecies.cc
    #Core/Domain.h
    #Core/Domain.cc
    #Boundary/Delegate.h
    #Boundary/MasterDelegate.cc
    #Boundary/WorkerDelegate.h
    #Boundary/Delegate.cc
    #Boundary/MasterDelegate.h
    #Boundary/SubdomainDelegate.h
    #Boundary/WorkerDelegate.cc
    #Boundary/SubdomainDelegate.cc
    #Recorder/MomentRecorder.h
    #Recorder/EnergyRecorder.cc
    #Recorder/FieldRecorder.h
    #Recorder/Snapshot.cc
    #Recorder/MomentRecorder.cc
    #Recorder/EnergyRecorder.h
    #Recorder/ParticleRecorder.cc
    #Recorder/VHistogramRecorder.cc
    #Recorder/VHistogramRecorder.h
    #Recorder/ParticleRecorder.h
    #Recorder/Recorder.h
    #Recorder/Recorder.cc
    #Recorder/FieldRecorder.cc
    #Recorder/Snapshot.h
    #Driver.cc
    #Driver.h
    #main.cc
    )

set_project_warnings(pic_1d)
enable_sanitizers(pic_1d)

add_subdirectory(test)
