
add_executable(rel_pic_1d
    ./main.cc
    ./Driver.cc
    ./ParamSet.cc
    ./Core/ColdSpecies.h
    ./Core/PartSpecies.h
    ./Core/Current.h
    ./Core/ColdSpecies.cc
    ./Core/BField.h
    ./Core/PartSpecies.cc
    ./Core/Domain.h
    ./Core/BField.cc
    ./Core/Species.h
    ./Core/Current.cc
    ./Core/Domain.cc
    ./Core/EField.h
    ./Core/EField.cc
    ./Core/Species.cc
    ./Predefined.h
    ./ParamSet.h
    ./InputWrapper.h
    ./Boundary/Delegate.h
    ./Boundary/MasterDelegate.cc
    ./Boundary/WorkerDelegate.h
    ./Boundary/Delegate.cc
    ./Boundary/MasterDelegate.h
    ./Boundary/SubdomainDelegate.h
    ./Boundary/WorkerDelegate.cc
    ./Boundary/SubdomainDelegate.cc
    ./PlasmaDesc.h
    ./Driver.h
    ./Geometry.cc
    ./Macros.h
    ./Recorder/MomentRecorder.h
    ./Recorder/EnergyRecorder.cc
    ./Recorder/FieldRecorder.h
    ./Recorder/Snapshot.cc
    ./Recorder/MomentRecorder.cc
    ./Recorder/EnergyRecorder.h
    ./Recorder/ParticleRecorder.cc
    ./Recorder/VHistogramRecorder.cc
    ./Recorder/VHistogramRecorder.h
    ./Recorder/ParticleRecorder.h
    ./Recorder/Recorder.h
    ./Recorder/Recorder.cc
    ./Recorder/FieldRecorder.cc
    ./Recorder/Snapshot.h
    ./Inputs.h
    ./Geometry.h
    ./VDF/LossconeVDF.cc
    ./VDF/MaxwellianVDF.h
    ./VDF/BitReversedPattern.h
    ./VDF/BitReversedPattern.cc
    ./VDF/MaxwellianVDF.cc
    ./VDF/VDF.h
    ./VDF/LossconeVDF.h
    ./VDF/VDF.cc
    ./Utility/Range.h
    ./Utility/lippincott.h
    ./Utility/lippincott.cc
    ./Utility/BorisPush.h
    ./Utility/Shape.h
    ./Utility/Scalar.h
    ./Utility/Options.h
    ./Utility/println.h
    ./Utility/Particle.h
    ./Utility/GridQ.h
    ./Utility/Vector.h
    ./Utility/Options.cc
    ./Utility/Tensor.h
    ./Utility/TypeMaps.h)

set_project_warnings(rel_pic_1d)
enable_sanitizers(rel_pic_1d)
